--- a/shellc/shellc/static/styles/modules.css
+++ b/shellc/shellc/static/styles/modules.css
@@ -1,184 +1,9 @@
-.header-menu-ul{
-  display: none;
-  position: fixed;
-  width: 100%;
-}
 
-.header-menu:hover ul{
-  display: block;
-  list-style-type: none;
-}
-
-.header-menu-ul span{
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 1.25em;
-}
-
-.header-menu-ul a {
-  text-decoration: none;
-}
-
-.header-menu-ul li{
-  display: block;
-  padding: 3%;
-  border: .1em solid white;
-  background-color: rgb(41, 66, 64);
-}
-
-.header-menu-ul li:hover{
-  background-color: rgba(76, 131, 127, .7);
-  transition: background-color 350ms ease;
-}
-
-.menu-icon-div {
-  font-size: 3em;
-  position: fixed;
-  right: 1%;
-  text-align: center;
-}
-
-.template {
-  display: none;
-}
-
-article.portfolio-pieces {
-  display: block;
-  margin: 2%;
-  text-align: center;
-}
-
-article.portfolio-pieces img {
-  width: 100%;
-}
-
-.ccPic {
-  width: 100%;
-}
-
-.ccPic img{
-  border-radius: 12%;
-  text-align: center;
-}
-
-.ccPic img:hover {
-  opacity: .8;
-}
-
-.professional {
-  background-color: rgba(43, 43, 43, .85);
-  border-radius: 5%;
-  text-align: center;
-  padding: 2%;
-  margin: 2%;
-}
-
-.professional ul {
-  list-style-type: none;
-  text-align: left;
-  margin-right: 5%;
-}
-
-.professional a{
-  text-decoration: none;
-  color: white;
-}
-
-#aboutme-p {
-  text-align: center;
-}
-
-article.portfolio-pieces:hover {
-  background-color: rgba(72, 98, 72, .77);
-  border-radius: 5%;
-  transition: background-color 1000ms ease;
-}
-
-.index-title {
-  text-align: center;
-  color: black;
-}
 
 @media screen and (min-width:600px) {
-  .menu-icon-div {
-    display: none;
-  }
-
-  .header-menu:hover ul{
-    cursor: pointer;
-    display: block;
-  }
-
-  .header-menu-ul {
-    display: block;
-    margin: 0 auto;
-    margin-top: 2%;
-  }
-
-  .header-menu-ul li{
-    display: inline;
-    padding: .5%;
-    text-align: center;
-    border-radius: 10%;
-    background-color: rgb(41, 66, 64);
-  }
-
-  .header-menu-ul li:hover{
-    background-color: rgba(76, 131, 127, .7);
-    transition: background-color 350ms ease;
-  }
-
-  article.portfolio-pieces {
-    display: inline-block;
-    width: 45%;
-    margin: 5% 1%;
-  }
-
-  .ccPic {
-    width: 90%;
-    display: block;;
-    margin: auto;
-  }
-
-  .professional {
-    display: inline-block;
-    width: 40%;
-    position: relative;
-
-  }
-
-  span.hide {
-    display: none;
-  }
-
-  #aboutMe-title{
-    margin-right: 8%;
-  }
-
-  #portfolio-title{
-    margin-right: 4%;
-  }
-
-  #repo-title{
-    padding-top: 5%;
-  }
-}
-
-@media screen and (min-width:855px) {
-  article.portfolio-pieces {
-    display: inline-block;
-    width: 30%;
-  }
-
-  .ccPic {
-    width: 28%;
-    display: inline-block;;
-    margin: 2%;
-    margin-top: 5%;
-  }
-
-  #home-top-third{
-    margin-top: 5%;
+  div.home-bg-img{
+      margin: 0
+      width: 100%;
+      content:url();
   }
 }
