--- a/shellc/shellc/templates/home.jinja2
+++ b/shellc/shellc/templates/home.jinja2
@@ -1,8 +1,10 @@
 {% extends "layout.jinja2" %}
 
 {% block body %}
-    <div class="home-content">
-        <h1>Sam Houston Enterprises, LLC.</h1>
-        <h3>Creative Consulting Solutions</h3>
+    <div class='home-bg-img'>
+        <div class="home-content">
+            <h1>Sam Houston Enterprises, LLC.</h1>
+            <h3>Creative Consulting Solutions</h3>
+        </div>
     </div>
 {% endblock body %}
