--- a/shellc/shellc/templates/layout.jinja2
+++ b/shellc/shellc/templates/layout.jinja2
@@ -15,7 +15,9 @@
   <body>
     <header>
         <h3><nav class='header-menu'>
-            <a href="{{ request.route_url('home')}}">Home</a>
+            <a class='header-menu-a' href="{{ request.route_url('home')}}">Home</a>
+            <a class='header-menu-a' href="">Services</a>
+            <a class='header-menu-a' href="">Contact</a>
         </nav></h3>
     </header>
     {% block body %}{% endblock %}
