--- a/shellc/shellc/static/styles/layout.css
+++ b/shellc/shellc/static/styles/layout.css
@@ -1,15 +1,25 @@
 
-div .home-content {
+div.home-content {
   width: 90%;
   margin: auto;
 }
 
+div.home-bg-img{
+    margin: 0;
+    width: 100%;
+    content:url();
+}
 
 @media screen and (min-width:605px) {
-  div .home-content {
+  div.home-content {
     width: 85%;
     margin: auto;
+    text-align: center;
+    z-index: 10000;
   }
 
+  .header-menu-a {
+    margin-left: 1%; 
+  }
 }
 /*complete*/  
