--- a/shellc/shellc/templates/layout.jinja2
+++ b/shellc/shellc/templates/layout.jinja2
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-        <h3><nav class='header-menu'>
+        <h3 class='header-menu'><nav>
             <a class='header-menu-a' href="{{ request.route_url('home')}}">Home</a>
             <a class='header-menu-a' href="">Services</a>
             <a class='header-menu-a' href="">Contact</a>
