--- a/shellc/shellc/templates/home.jinja2
+++ b/shellc/shellc/templates/home.jinja2
@@ -5,6 +5,12 @@
         <div class="home-content">
             <h1>Sam Houston Enterprises, LLC.</h1>
             <h3>Creative Consulting Solutions</h3>
+            <ul class="services">
+                <li>Web Design</li>
+                <li>Software Development</li>
+                <li>Operations Efficiency</li>
+                <li>Advertising and Marketing</li>
+            </ul>
         </div>
     </div>
 {% endblock body %}
