--- a/shellc/shellc/templates/home.jinja2
+++ b/shellc/shellc/templates/home.jinja2
@@ -1,15 +1,15 @@
 {% extends "layout.jinja2" %}
 
 {% block body %}
-    <div class='home-bg-img'>
+    <div class='featured-section-div'>
         <div class="home-content">
             <h1>Sam Houston Enterprises, LLC.</h1>
             <h3>Creative Consulting Solutions</h3>
             <ul class="services">
-                <li>Web Design</li>
-                <li>Software Development</li>
-                <li>Operations Efficiency</li>
-                <li>Advertising and Marketing</li>
+                <li class="service-items">Web Design</li>
+                <li class="service-items">Software Development</li>
+                <li class="service-items">Operations Efficiency</li>
+                <li class="service-items">Advertising and Marketing</li>
             </ul>
         </div>
     </div>
